<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SlidePuzzel</string>
    <string name="title">SlidePuzzel</string>
    <string name="back">Back</string>
    
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="highscores">Highscores</string>
    <string name="howtoplay">How To Play</string>
    <string name="exit">Exit</string>
    
    <string name="howtoplaytext">
		Settings menu:\n
		<li>Easy mode allows hints</li>\n
		<li>In hard mode the screen will rotate every 10 seconds</li>\n
		<li>Choose 3x3 for an 8-puzzle</li>\n
		<li>Choose 4x4 for a 15-puzzle</li>\n
		<li>Live image mode will display a video puzzle</li>\n
		<li>Gallery image mode will allow you to choose a picture to play as a puzzle</li>\n
		\n
		Choose play to play the game\n
		<li>To move a tile, simply press it. It will move automatically if it is a valid move!</li>\n
		<li>The black square always ends in the bottom right corner</li>\n
		<li>Keep on moving tiles to win</li>
	</string>
    
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="size">Size</string>
    <string name="three">3 x 3</string>
    <string name="four">4 x 4</string>
    <string name="mode">Mode</string>
    <string name="live">Live Image</string>
    <string name="image">Gallery Image</string>
    <string name="reset">Reset</string>
        
    <string name="hint">Hint</string>
    
    <string name="congrats">Congratulations, you have solved the puzzle!</string>
    <string name="enternametext">Enter your name here: </string>
    <string name="NameDefault">Your name here</string>
    <string name="confirm">Confirm</string>
    <string name="newgame">New Game</string>
    <string name="highscore_name">Name</string>
    <string name="highscore_num">Num</string>
    <string name="highscore_time">Time</string>
    <string name="freeze">Freeze</string>
    
</resources>    