<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:text="@string/title" />

    <Button
        android:id="@+id/play"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/play"
        android:onClick="gameActivity" />

    <Button
        android:id="@+id/settings"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:onClick="settingsActivity" />

    <Button
        android:id="@+id/highscores"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/highscores"
        android:onClick="scoresActivity" />

    <Button
        android:id="@+id/howtoplay"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/howtoplay"
        android:onClick="howtoActivity" />

    <Button
        android:id="@+id/exit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/exit" />

</LinearLayout>