<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="right"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/settingstitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:text="@string/settings" />
 <RadioGroup
  android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical">
    <RadioButton
        android:id="@+id/easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy"
        android:checked="true" />

    <RadioButton
        android:id="@+id/normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal" />

    <RadioButton
        android:id="@+id/hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard" />
</RadioGroup>
    <Button
        android:id="@+id/reset"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:text="@string/reset" />

    <Button
        android:id="@+id/back3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>