<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="right"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/howtoplaytitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:text="@string/howtoplay" />

    <TextView
        android:id="@+id/howtoplaytext"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:text="@string/howtoplaytext" />

    <Button
        android:id="@+id/back1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>