<?xml version="1.0" encoding="utf-8"?>
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout3"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:ignore="UselessParent" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >


            <TextView
                android:id="@+id/textView1"
                android:layout_weight="0.2"
                android:layout_width="0px"
                android:text="@string/highscore_num" />
            
			<TextView
                android:id="@+id/textView2"
                android:layout_weight="0.5"
                android:layout_width="0px"
                android:text="@string/highscore_name" />
            
            <TextView
                android:id="@+id/textView3"
                android:layout_weight="0.3"
                android:layout_width="0px"
                android:text="@string/highscore_time" />

        </TableRow>
    </TableLayout>